# rloc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/rloc-cli/: Cargo.toml
crates/rloc-cli/src/: cli.rs  error.rs  main.rs
crates/rloc-cli/src/commands/: config.rs  detect.rs  explain.rs  mod.rs  scan.rs
crates/rloc-cli/tests/: detect_output.rs  exit_codes.rs  explain_output.rs  scan_output.rs
crates/rloc-config/: Cargo.toml
crates/rloc-config/src/: file_config.rs  lib.rs  merge.rs  presets.rs
crates/rloc-config/tests/: config_integration.rs
crates/rloc-core/: Cargo.toml
crates/rloc-core/src/: analyze.rs  categories.rs  discover.rs  filters.rs  lib.rs  metrics.rs  registry.rs  text_backend.rs  types.rs
crates/rloc-core/tests/: backend_registry.rs  discovery_pipeline.rs  explain_detect.rs
crates/rloc-lang-cfamily/: Cargo.toml
crates/rloc-lang-cfamily/src/: classify.rs  lib.rs
crates/rloc-lang-cfamily/tests/: classify.rs
crates/rloc-lang-go/: Cargo.toml
crates/rloc-lang-go/src/: classify.rs  lib.rs
crates/rloc-lang-go/tests/: classify.rs
crates/rloc-lang-js/: Cargo.toml
crates/rloc-lang-js/src/: classify.rs  lib.rs  parser.rs
crates/rloc-lang-js/tests/: classify.rs
crates/rloc-lang-powershell/: Cargo.toml
crates/rloc-lang-powershell/src/: classify.rs  lib.rs
crates/rloc-lang-powershell/tests/: classify.rs
crates/rloc-lang-python/: Cargo.toml
crates/rloc-lang-python/src/: classify.rs  lib.rs  parser.rs
crates/rloc-lang-python/tests/: classify.rs
crates/rloc-lang-rust/: Cargo.toml
crates/rloc-lang-rust/src/: classify.rs  lib.rs  parser.rs
crates/rloc-lang-rust/tests/: classify.rs
crates/rloc-lang-shell/: Cargo.toml
crates/rloc-lang-shell/src/: classify.rs  lib.rs
crates/rloc-lang-shell/tests/: classify.rs
crates/rloc-lang-sql/: Cargo.toml
crates/rloc-lang-sql/src/: classify.rs  lib.rs
crates/rloc-lang-web/: Cargo.toml
crates/rloc-lang-web/src/: lib.rs  (+1 more)
crates/rloc-report/: Cargo.toml
docs/plans/: 2026-04-22-wave1-language-expansion.md
(+9 files in other folders)
