[package]
name = "rloc-lang-js"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rloc-core = { path = "../rloc-core" }
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
